<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freenove_4wd_ros</name>
  <version>0.0.0</version>
  <description>ROS driver for Freenove 4wd platform</description>
  <maintainer email="tim@todo.todo">tim</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <run_depend>python3-smbus<run_depend>
  <run_depend>teleop_twist_joy<run_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
